--- a/index.html
+++ b/index.html
@@ -3,16 +3,28 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Unreal Landscapes</title>
+  <title>Cosmic Cruising</title>
   <style>
     html, body, #container {
       margin: 0;
       overflow: hidden;
     }
+    img {
+      width: 100vw;
+      height: 100vh;
+      position: absolute;
+      left: 0;
+      top: 0;
+      z-index: 100;
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+    }
   </style>
 </head>
 <body>
   <div id="container"></div>
+  <img src="./images/window.png"/>
   <script src="./lib/three.js"></script>
   <script src="./lib/OrbitControls.js"></script>
   <script src="./lib/threex.planets.js"></script>
